cabal-version:   2.4
name:            fs-effectful
version:         0.1
license:         MIT
license-file:    LICENSE
tested-with:
  GHC ==9.2.8
   || ==9.4.8
   || ==9.6.5
   || ==9.8.2
   || ==9.10.1
   || ==9.12.1

copyright:       2022-2025 Thomas Bidne
author:          Thomas Bidne
maintainer:      tbidne@protonmail.com
homepage:        https://github.com/tbidne/effectful-libs/
bug-reports:     https://github.com/tbidne/effectful-libs/issues
synopsis:        FileSystem effects
description:     Provides file-system effects
category:        Effects
extra-doc-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/effectful-libs

common common-lang
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    ExplicitNamespaces
    LambdaCase
    MultiWayIf
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    TypeFamilies

  default-language:   GHC2021

  if os(osx)
    cpp-options: -DOSX

  if os(windows)
    cpp-options: -DWINDOWS

library
  import:             common-lang
  exposed-modules:
    Effectful.FileSystem.FileReader.Dynamic
    Effectful.FileSystem.FileReader.Static
    Effectful.FileSystem.FileWriter.Dynamic
    Effectful.FileSystem.FileWriter.Static
    Effectful.FileSystem.HandleReader.Dynamic
    Effectful.FileSystem.HandleReader.Static
    Effectful.FileSystem.HandleWriter.Dynamic
    Effectful.FileSystem.HandleWriter.Static
    Effectful.FileSystem.PathReader.Dynamic
    Effectful.FileSystem.PathReader.Static
    Effectful.FileSystem.PathWriter.Dynamic
    Effectful.FileSystem.PathWriter.Static
    Effectful.FileSystem.PathWriter.Utils

  reexported-modules:
    , fs-utils:FileSystem.IO as FileSystem.IO
    , fs-utils:FileSystem.OsPath as FileSystem.OsPath
    , fs-utils:FileSystem.PathType as FileSystem.PathType
    , fs-utils:FileSystem.UTF8 as FileSystem.UTF8

  build-depends:
    , base             >=4.16.0.0  && <4.22
    , bytestring       >=0.10.12.0 && <0.13
    , deepseq          >=1.4.4.0   && <1.6
    , directory        ^>=1.3.8.0
    , effectful-core   >=2.5.0.0   && <2.6
    , effectful-utils  ^>=0.1
    , exception-utils  ^>=0.1
    , filepath         >=1.4.100.1 && <1.6
    , fs-utils         ^>=0.1
    , optics-core      ^>=0.4
    , text             >=1.2.4.0   && <2.2
    , time             >=1.9.3     && <1.15

  hs-source-dirs:     src

test-suite unit
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Unit.PathReader
    Unit.PathWriter
    Unit.PathWriter.CopyDir
    Unit.PathWriter.Symlink
    Unit.TestUtils

  build-depends:
    , base
    , bytestring
    , effectful-core
    , effectful-utils
    , env-guard        ^>=0.2
    , exception-utils  ^>=0.1
    , exceptions       ^>=0.10.4
    , fs-effectful
    , fs-utils
    , tasty            >=1.1.0.3 && <1.6
    , tasty-hunit      >=0.9     && <0.11
    , text

  hs-source-dirs: test/unit
