cabal-version:   2.4
name:            haskeline-effectful
version:         0.1
license:         MIT
license-file:    LICENSE
tested-with:
  GHC ==9.2.8
   || ==9.4.8
   || ==9.6.5
   || ==9.8.2
   || ==9.10.1
   || ==9.12.1

copyright:       2025 Thomas Bidne
author:          Thomas Bidne
maintainer:      tbidne@protonmail.com
homepage:        https://github.com/tbidne/effectful-libs/
bug-reports:     https://github.com/tbidne/effectful-libs/issues
synopsis:        Haskeline effects
description:     Provides Haskeline effects
category:        Effects
extra-doc-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/effectful-libs

common common-lang
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    ExplicitNamespaces
    LambdaCase
    MultiWayIf
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    TypeFamilies

  default-language:   GHC2021

library
  import:          common-lang
  exposed-modules:
    Effectful.Haskeline.Dynamic
    Effectful.Haskeline.Static

  build-depends:
    , base             >=4.16.0.0 && <4.22
    , effectful-core   >=2.5.0.0  && <2.6
    , effectful-utils  ^>=0.1
    , exceptions       ^>=0.10.4
    , haskeline        ^>=0.8.4.0
    , transformers     >=0.5.6.2  && <0.7

  hs-source-dirs:  src
