cabal-version:   2.4
name:            logger-effectful
version:         0.1
license:         MIT
license-file:    LICENSE
tested-with:
  GHC ==9.2.8
   || ==9.4.8
   || ==9.6.5
   || ==9.8.2
   || ==9.10.1
   || ==9.12.1

copyright:       2022-2025 Thomas Bidne
author:          Thomas Bidne
maintainer:      tbidne@protonmail.com
homepage:        https://github.com/tbidne/effectful-libs/
bug-reports:     https://github.com/tbidne/effectful-libs/issues
synopsis:        Effectful version of @monad-logger@'s API.
description:     Provides an effectful version of @monad-logger@'s API.
category:        Effects
extra-doc-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/effectful-libs

common common-lang
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    ExplicitNamespaces
    LambdaCase
    MultiWayIf
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    TypeFamilies

  default-language:   GHC2021

library
  import:          common-lang
  exposed-modules: Effectful.Logger.Dynamic
  build-depends:
    , base              >=4.16.0.0  && <4.22
    , bytestring        >=0.10.12.0 && <0.13
    , deepseq           >=1.4.4.0   && <1.6
    , effectful-core    >=2.5.0.0   && <2.6
    , effectful-utils   ^>=0.1
    , fast-logger       >=2.1       && <3.3
    , optics-core       ^>=0.4
    , template-haskell  >=2.16.0.0  && <2.24
    , text              >=1.2.4.0   && <2.2

  hs-source-dirs:  src

test-suite unit
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:
    , base
    , effectful-core
    , hedgehog          >=1.0.2   && <1.6
    , logger-effectful
    , optics-core
    , tasty             >=1.1.0.3 && <1.6
    , tasty-hedgehog    >=1.2.0.0 && <1.5
    , tasty-hunit       >=0.9     && <0.11
    , text

  hs-source-dirs: test/unit
