cabal-version:      2.4
name:               logger-ns-effectful
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:
  GHC ==8.10.7 || ==9.0.2 || ==9.2.8 || ==9.4.7 || ==9.6.3 || ==9.8.1

copyright:          2022 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/effectful-effects/
bug-reports:        https://github.com/tbidne/effectful-effects/issues
synopsis:           Adds namespaces to monad-logger
description:        Adds namespaces to monad-logger
category:           Effects
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/effectful-effects

common common
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GADTs
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import:           common
  exposed-modules:  Effectful.LoggerNS.Dynamic
  build-depends:
    , base              >=4.14.0.0  && <4.20
    , bytestring        >=0.10.12.0 && <0.13
    , containers        >=0.6.3.1   && <0.8
    , deepseq           >=1.4.4.0   && <1.6
    , effectful-core    >=2.2.1.0   && <2.4
    , fast-logger       >=2.1       && <3.3
    , logger-effectful  ^>=0.1
    , optics-core       ^>=0.4
    , template-haskell  >=2.16.0.0  && <2.22
    , text              >=1.2.4.0   && <2.2
    , time-effectful    ^>=0.1

  hs-source-dirs:   src
  default-language: Haskell2010

test-suite unit
  import:           common
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  build-depends:
    , base
    , bytestring
    , effectful-core
    , logger-effectful
    , logger-ns-effectful
    , tasty                >=1.1.0.3 && <1.6
    , tasty-hunit          >=0.9     && <0.11
    , text
    , time                 >=1.9.3   && <1.14
    , time-effectful

  hs-source-dirs:   test/unit
  default-language: Haskell2010
