cabal-version:      2.4
name:               logger-ns-effectful
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:
  GHC ==9.2.8 || ==9.4.8 || ==9.6.5 || ==9.8.2 || ==9.10.1

copyright:          2022-2024 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/effectful-effects/
bug-reports:        https://github.com/tbidne/effectful-effects/issues
synopsis:           Adds namespaces to monad-logger
description:        Adds namespaces to monad-logger
category:           Effects
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/effectful-effects

common common-lang
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    ExplicitNamespaces
    LambdaCase
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    ScopedTypeVariables
    TypeFamilies

  default-language:   GHC2021

library
  import:          common-lang
  exposed-modules:
    Effectful.LoggerNS.Dynamic
    Effectful.LoggerNS.Static
    Effectful.LoggerNS.Utils

  build-depends:
    , base                  >=4.16.0.0  && <4.21
    , bytestring            >=0.10.12.0 && <0.13
    , concurrent-effectful  ^>=0.1
    , containers            >=0.6.3.1   && <0.8
    , deepseq               >=1.4.4.0   && <1.6
    , effectful             >=2.5.0.0   && <2.6
    , fast-logger           >=2.1       && <3.3
    , logger-effectful      ^>=0.1
    , optics-core           ^>=0.4
    , template-haskell      >=2.16.0.0  && <2.23
    , text                  >=1.2.4.0   && <2.2
    , time-effectful        ^>=0.1

  hs-source-dirs:  src

test-suite unit
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:
    , base
    , bytestring
    , concurrent-effectful
    , effectful
    , logger-effectful
    , logger-ns-effectful
    , tasty                 >=1.1.0.3 && <1.6
    , tasty-hunit           >=0.9     && <0.11
    , text
    , time                  >=1.9.3   && <1.15
    , time-effectful

  hs-source-dirs: test/unit
