cabal-version:      2.4
name:               terminal-effectful
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:
  GHC ==8.10.7
   || ==9.0.2
   || ==9.2.8
   || ==9.4.8
   || ==9.6.5
   || ==9.8.2
   || ==9.10.1

copyright:          2022-2024 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/effectful-effects/
bug-reports:        https://github.com/tbidne/effectful-effects/issues
synopsis:           Terminal effects
description:        Terminal effects
category:           Effects
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/effectful-effects

common common
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GADTs
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import:           common
  exposed-modules:
    Effectful.Terminal.Dynamic
    Effectful.Terminal.Static

  build-depends:
    , base                  >=4.14.0.0  && <4.21
    , bytestring            >=0.10.12.0 && <0.13
    , effectful-core        >=2.2.1.0   && <2.4
    , exceptions-effectful  ^>=0.1
    , pretty-terminal       ^>=0.1.0.0
    , terminal-size         ^>=0.3.0
    , text                  >=1.2.4.0   && <2.2

  hs-source-dirs:   src
  default-language: Haskell2010
