cabal-version:   2.4
name:            terminal-effectful
version:         0.1
license:         MIT
license-file:    LICENSE
tested-with:
  GHC ==9.2.8
   || ==9.4.8
   || ==9.6.5
   || ==9.8.2
   || ==9.10.1
   || ==9.12.1

copyright:       2022-2025 Thomas Bidne
author:          Thomas Bidne
maintainer:      tbidne@protonmail.com
homepage:        https://github.com/tbidne/effectful-libs/
bug-reports:     https://github.com/tbidne/effectful-libs/issues
synopsis:        Terminal effects
description:     Provides terminal effects
category:        Effects
extra-doc-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/effectful-libs

common common-lang
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    ExplicitNamespaces
    LambdaCase
    MultiWayIf
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    TypeFamilies

  default-language:   GHC2021

library
  import:          common-lang
  exposed-modules:
    Effectful.Terminal.Dynamic
    Effectful.Terminal.Static

  build-depends:
    , base             >=4.16.0.0  && <4.22
    , bytestring       >=0.10.12.0 && <0.13
    , effectful-core   >=2.5.0.0   && <2.6
    , effectful-utils  ^>=0.1
    , pretty-terminal  ^>=0.1.0.0
    , terminal-size    ^>=0.3.0
    , text             >=1.2.4.0   && <2.2

  hs-source-dirs:  src

test-suite unit
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:
    , base
    , effectful-core
    , tasty               >=1.1.0.3 && <1.6
    , tasty-hunit         >=0.9     && <0.11
    , terminal-effectful

  hs-source-dirs: test/unit
