cabal-version:      2.4
name:               time-effectful
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:
  GHC ==8.10.7 || ==9.0.2 || ==9.2.8 || ==9.4.7 || ==9.6.3 || ==9.8.1

copyright:          2022 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/effectful-effects/
bug-reports:        https://github.com/tbidne/effectful-effects/issues
synopsis:           Time effects
description:        Time effects
category:           Effects
extra-source-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/effectful-effects

common common
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GADTs
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import:           common
  exposed-modules:
    Effectful.Time.Dynamic
    Effectful.Time.Static
    Effectful.Time.TimeSpec
    Effectful.Time.Utils

  build-depends:
    , algebra-simple  ^>=0.1
    , base            >=4.14.0.0 && <4.20
    , bounds          ^>=0.1
    , deepseq         >=1.4.4.0  && <1.6
    , effectful-core  >=2.2.1.0  && <2.4
    , optics-core     ^>=0.4
    , time            >=1.9.3    && <1.14

  hs-source-dirs:   src
  default-language: Haskell2010

test-suite unit
  import:           common
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  build-depends:
    , base
    , effectful-core
    , hedgehog        >=1.0.2   && <1.5
    , optics-core
    , tasty           >=1.1.0.3 && <1.6
    , tasty-hedgehog  >=1.2.0.0 && <1.5
    , tasty-hunit     >=0.9     && <0.11
    , time
    , time-effectful

  hs-source-dirs:   test/unit
  default-language: Haskell2010
