cabal-version:   2.4
name:            time-effectful
version:         0.1
license:         MIT
license-file:    LICENSE
tested-with:
  GHC ==9.2.8
   || ==9.4.8
   || ==9.6.5
   || ==9.8.2
   || ==9.10.1
   || ==9.12.1

copyright:       2022-2025 Thomas Bidne
author:          Thomas Bidne
maintainer:      tbidne@protonmail.com
homepage:        https://github.com/tbidne/effectful-libs/
bug-reports:     https://github.com/tbidne/effectful-libs/issues
synopsis:        Time effects
description:     Provides time effects
category:        Effects
extra-doc-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/effectful-libs

common common-lang
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    ExplicitNamespaces
    LambdaCase
    MultiWayIf
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    TypeFamilies

  default-language:   GHC2021

library
  import:          common-lang
  exposed-modules:
    Effectful.Time.Dynamic
    Effectful.Time.Static
    Effectful.Time.TimeSpec
    Effectful.Time.Utils

  build-depends:
    , algebra-simple   ^>=0.1
    , base             >=4.16.0.0 && <4.22
    , bounds           ^>=0.1
    , deepseq          >=1.4.4.0  && <1.6
    , effectful-core   >=2.5.0.0  && <2.7
    , effectful-utils  ^>=0.1
    , optics-core      ^>=0.4
    , time             >=1.9.3    && <1.16
    , tz               ^>=0.1.3.3

  hs-source-dirs:  src

test-suite unit
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:
    , base
    , effectful-core
    , hedgehog        >=1.0.2   && <1.7
    , optics-core
    , tasty           >=1.1.0.3 && <1.6
    , tasty-hedgehog  >=1.2.0.0 && <1.5
    , tasty-hunit     >=0.9     && <0.11
    , time
    , time-effectful

  hs-source-dirs: test/unit
