cabal-version:   2.4
name:            typed-process-dynamic-effectful
version:         0.1
license:         MIT
license-file:    LICENSE
tested-with:
  GHC ==9.2.8
   || ==9.4.8
   || ==9.6.5
   || ==9.8.3
   || ==9.10.1
   || ==9.12.1

copyright:       2022-2025 Thomas Bidne
author:          Thomas Bidne
maintainer:      tbidne@protonmail.com
homepage:        https://github.com/tbidne/typed-process-dynamic-effectful/
bug-reports:
  https://github.com/tbidne/typed-process-dynamic-effectful/issues

synopsis:        Async effects
description:     Provides async effects
category:        Effects
extra-doc-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/typed-process-dynamic-effectful

common common-lang
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    ExplicitNamespaces
    LambdaCase
    MultiWayIf
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    TypeFamilies

  default-language:   GHC2021

  if os(windows)
    cpp-options: -DWINDOWS

library
  import:          common-lang
  exposed-modules: Effectful.Process.Typed.Dynamic
  build-depends:
    , base             >=4.16.0.0  && <4.22
    , bytestring       >=0.10.12.0 && <0.13
    , effectful-core   >=2.5.0.0   && <2.7
    , effectful-utils  ^>=0.1
    , typed-process    >=0.1.0.0   && <0.3

  hs-source-dirs:  src
